--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ async-trait = "0.1.83"
 atty = "0.2.14"
 base64 = "0.22.1"
 bincode = "1.3"
-byte-unit = "5.1.4"
+byte-unit = "5.1.6"
 bytes = { version = "1", features = ["serde"] }
 camino = { version = "1.1", features = ["serde1"] }
 cfg-if = { version = "1" }
@@ -46,7 +46,7 @@ clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
 clearscreen = "2.0.1"
 crossterm = { version = "0.28.1" }
 crucible-workspace-hack = "0.1.0"  # see [patch.crates-io.crucible-workspace-hack] for more
-csv = "1.3.0"
+csv = "1.3.1"
 expectorate = "1.1.0"
 futures = "0.3"
 futures-core = "0.3"
@@ -57,7 +57,7 @@ human_bytes = "0.4.3"
 humantime = "2.1.0"
 hyper = { version = "1", features = [ "full" ] }
 hyper-staticfile = "0.10.1"
-indicatif = { version = "0.17.8", features = ["rayon"] }
+indicatif = { version = "0.17.9", features = ["rayon"] }
 itertools = "0.13.0"
 libc = "0.2"
 mime_guess = "2.0.5"
@@ -71,7 +71,7 @@ openapiv3 = "2.0.0"
 opentelemetry = "0.24.0"
 opentelemetry-jaeger = { version = "0.20.0" }
 percent-encoding = "2.3"
-proptest = "1.5.0"
+proptest = "1.6.0"
 rayon = "1.10.0"
 rand = { version = "0.8.5", features = ["min_const_gen", "small_rng"] }
 rand_chacha = "0.3.1"
@@ -81,6 +81,7 @@ ringbuffer = "0.15.0"
 rusqlite = { version = "0.32" }
 rustls-pemfile = { version = "1.0.4" }
 schemars = { version = "0.8", features = [ "chrono", "uuid1" ] }
+semver = "1"
 serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 sha2 = "0.10"
@@ -99,20 +100,24 @@ strum_macros = "0.26"
 tempfile = "3"
 test-strategy = "0.4.0"
 thiserror = "1"
-tokio = { version = "1.36", features = ["full"] }
+tokio = { version = "1.42", features = ["full"] }
 tokio-rustls = { version = "0.24.1" }
 tokio-test = "*"
 tokio-util = { version = "0.7", features = ["codec"]}
 toml = "0.8"
 tracing = "0.1"
 tracing-opentelemetry = "0.22.0"
-tracing-subscriber = "0.3.18"
+tracing-subscriber = "0.3.19"
 twox-hash = "1.6.3"
 usdt = "0.5.0"
 uuid = { version = "1", features = [ "serde", "v4" ] }
 
 # git
-dropshot = { version = "0.12.0", features = [ "usdt-probes" ] }
+dropshot = { git = "https://github.com/nshalman/dropshot", branch = "otel-tracing", features = [
+  "usdt-probes",
+  "otel-tracing",
+  "tokio-tracing",
+] }
 omicron-common = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
 nexus-client = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
 internal-dns = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
